objects/X9902FieldMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MappingFieldAPIName__c</fullName>
        <label>Mapping Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappingObjectName__c</fullName>
        <defaultValue>&apos;AgencyProfile__c&apos;</defaultValue>
        <label>Mapping Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>X9902Agency</fullName>
                    <default>true</default>
                    <label>X9902Agency</label>
                </value>
                <value>
                    <fullName>X9902Client</fullName>
                </value>
                <value>
                    <fullName>X9902Counselor</fullName>
                </value>
                <value>
                    <fullName>X9902Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X9902Field__c</fullName>
        <label>9902 Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X9902Object__c</fullName>
        <defaultValue>&apos;X9902Agency__c&apos;</defaultValue>
        <label>9902 Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X9902XMLDefaultValue_c__c</fullName>
        <description>Some times if the mapped filed is blank the default value needs to be submitted to HUD.</description>
        <label>X9902XMLDefaultValue__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X9902XMLMapping__c</fullName>
        <label>9902XMLNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X9902XMLParentNode__c</fullName>
        <label>9902XMLParentNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>9902 Field Mapping</label>
    <listViews>
        <fullName>X9902_Client</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>X9902Field__c</columns>
        <columns>X9902Object__c</columns>
        <columns>X9902XMLMapping__c</columns>
        <columns>X9902XMLParentNode__c</columns>
        <columns>IsActive__c</columns>
        <columns>MappingFieldAPIName__c</columns>
        <columns>MappingObjectName__c</columns>
        <columns>Report_Type__c</columns>
        <columns>X9902XMLDefaultValue_c__c</columns>
        <filterScope>Everything</filterScope>
        <label>9902 Client</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>9902 Field Mappings</pluralLabel>
</CustomObject>